@@ -39,6 +39,7 @@ orientation_threshold_portrait = 20
 orientation_overflow_min = 800
 orientation_overflow_max = 1250
 orientation_poll_interval = 1000
+orientation_buffer_size = 10
 
 # Offset for Screen.TopEdge. If 0, Screen.TopEdge equals side edges from
 # OrientationSensor. Each additional value rotates the top one step to
